--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 title: My GitHub Pages
 description: Here's my short description of the current website.
